--- a/public/tenant/css/menu.css
+++ b/public/tenant/css/menu.css
@@ -189,18 +189,18 @@ button:active {
     padding-top: 22%;
 }
 
-.btn {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    margin: 72% 0 0 0;
-    width: 60px;
-    height: 25px;
-    padding: 0px 0px;
-    font-size: 14px;
-    border-radius: 25px;
-}
+/*.btn {*/
+/*    border: 2px solid black;*/
+/*    background-color: white;*/
+/*    color: black;*/
+/*    cursor: pointer;*/
+/*    margin: 72% 0 0 0;*/
+/*    width: 60px;*/
+/*    height: 25px;*/
+/*    padding: 0px 0px;*/
+/*    font-size: 14px;*/
+/*    border-radius: 25px;*/
+/*}*/
 
 .default {
     border-color: #b9b9b9;
@@ -1149,3 +1149,20 @@ header {
     box-shadow: none;
 }
 
+
+.myBTN {
+    background-color: #FF5733; /* Change the background color */
+    color: #fff; /* Change the text color */
+    border: 2px solid #FF5733; /* Change the border color */
+    padding: 10px 20px; /* Adjust padding as needed */
+    border-radius: 5px; /* Add rounded corners */
+    font-size: 16px; /* Change font size */
+    text-transform: uppercase; /* Convert text to uppercase */
+    cursor: pointer; /* Add a pointer cursor on hover */
+}
+
+/* Custom CSS for button on hover */
+.myBTN:hover {
+    background-color: #FF4500; /* Change background color on hover */
+    border-color: #FF4500; /* Change border color on hover */
+}
