tenant template menu

--- a/public/tenant/css/menu.css
+++ b/public/tenant/css/menu.css
@@ -1,30 +1,32 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-html, body {
+html, body
+{
     overscroll-behavior: contain;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
 }
 
 .splash {
-    position: relative;
+    position:relative;
     height: 100%;
-    width: 100%;
+    width:100%;
 }
 
 .splash img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    margin:auto;
     max-width: 300px;
 }
 
 
-.loader {
+.loader{
     position: fixed;
     left: 0px;
     top: 0px;
@@ -35,7 +37,7 @@ html, body {
     background-size: 40px;
 }
 
-.expiryNotice {
+.expiryNotice{
     text-align: center;
     width: 100%;
     position: absolute;
@@ -61,27 +63,27 @@ header {
     text-align: center;
 }
 
-.color-overlay:before {
+.color-overlay:before{
     position: absolute;
-    content: " ";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    content:" ";
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
     display: block;
-    z-index: 0;
+    z-index:0;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.branches-color-overlay:before {
+.branches-color-overlay:before{
     position: absolute;
-    content: " ";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    content:" ";
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
     display: block;
-    z-index: 0;
+    z-index:0;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -144,11 +146,11 @@ button {
     margin: 50%;
 }
 
-button:active {
+button:active{
     transform: translateY(1px);
 }
 
-.categoriesToggle.active {
+.categoriesToggle.active{
     font-weight: 500;
 }
 
@@ -167,13 +169,12 @@ button:active {
     float: none;
 }
 
-.item-image > div {
+.item-image > div{
     width: 70%;
     margin: auto;
     padding-top: 10%;
 }
-
-.item-image > div > img {
+.item-image > div > img{
     display: inline-block;
     position: relative;
     width: 90px;
@@ -182,25 +183,24 @@ button:active {
     border-radius: 50%;
     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.07);
 }
-
-.item-name {
+.item-name{
     font-weight: bold;
     font-size: 15px;
     padding-top: 22%;
 }
 
-/*.btn {*/
-/*    border: 2px solid black;*/
-/*    background-color: white;*/
-/*    color: black;*/
-/*    cursor: pointer;*/
-/*    margin: 72% 0 0 0;*/
-/*    width: 60px;*/
-/*    height: 25px;*/
-/*    padding: 0px 0px;*/
-/*    font-size: 14px;*/
-/*    border-radius: 25px;*/
-/*}*/
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    margin: 72% 0 0 0;
+    width: 60px;
+    height: 25px;
+    padding: 0px 0px;
+    font-size: 14px;
+    border-radius: 25px;
+}
 
 .default {
     border-color: #b9b9b9;
@@ -211,7 +211,7 @@ button:active {
     background: #e7e7e7;
 }
 
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover {
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
     border: none;
 }
 
@@ -219,7 +219,7 @@ button:active {
     border: none;
 }
 
-a {
+a{
     text-decoration: none;
     color: #555;
 }
@@ -232,7 +232,7 @@ a {
     padding: 5% 30% 0 12%;
 }
 
-.row.item-title .item-image {
+.row.item-title .item-image{
     position: absolute;
     width: 90px;
     height: 90px;
@@ -285,7 +285,7 @@ a {
     margin: 4px 0;
 }
 
-.row.item-price {
+.row.item-price{
     padding: 0 12%;
 }
 
@@ -313,7 +313,7 @@ a {
     text-align: left;
 }
 
-.navigation {
+.navigation{
     color: #fff;
     top: 40%;
     left: 10%;
@@ -322,7 +322,7 @@ a {
     height: 50px;
 }
 
-.categoryTitle {
+.categoryTitle{
     width: 100%;
     top: 40%;
     font-size: 25px;
@@ -330,8 +330,8 @@ a {
 }
 
 .form-container {
-    position: relative;
-    width: 100%;
+    position:relative;
+    width:100%;
 }
 
 div form {
@@ -339,7 +339,7 @@ div form {
     max-width: 300px;
 }
 
-button.submit {
+button.submit{
     margin: 0;
     background-color: #555;
     border-color: #555;
@@ -348,13 +348,13 @@ button.submit {
     height: 30px
 }
 
-button.skip {
+button.skip{
     margin: 0;
     width: 80px;
     height: 30px
 }
 
-.itemInfo {
+.itemInfo{
     color: #b9b9b9;
     border: none;
 }
@@ -408,13 +408,12 @@ button.skip {
     overflow: auto;
 }
 
-.floatParent {
+.floatParent{
     bottom: 18px;
     right: 18px;
     position: fixed;
 }
-
-.float {
+.float{
     display: inline-block;
     width: 45px;
     height: 45px;
@@ -428,11 +427,23 @@ button.skip {
     margin-left: 10px;
 }
 
-.my-float {
+.my-float{
     margin-top: 11px;
 }
+.float {
+    color: #555;
+    background-color: transparent !important;
+    box-shadow: none;
+    border: none;
+    margin: 0;
+    border-radius: 0;
+}
 
-.item-flag {
+.floatParent a:focus, .floatParent a:hover {
+    color: #555;
+}
+
+.item-flag{
     position: absolute;
     bottom: 3px;
     right: 3px;
@@ -440,7 +451,7 @@ button.skip {
     height: 20px;
 }
 
-.item-flag-container {
+.item-flag-container{
     background-color: #fff;
     border-radius: 50%;
     width: 28px;
@@ -450,11 +461,11 @@ button.skip {
     position: absolute;
 }
 
-.flags {
+.flags{
     padding: 0 12%;
 }
 
-.flags > div.item-flag-container {
+.flags>div.item-flag-container{
     background-color: whitesmoke;
     width: 40px;
     height: 40px;
@@ -469,7 +480,7 @@ button.skip {
     border-radius: 50%;
 }
 
-.flags > div > .item-flag {
+.flags>div>.item-flag{
     bottom: 3px;
     right: 3px;
     width: 20px;
@@ -477,103 +488,7 @@ button.skip {
     position: inherit;
 }
 
-.list-group-item .item-description {
-    font-size: 11px;
-    height: 30px;
-    margin-bottom: 10px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    word-wrap: break-word;
-    width: 90%;
-}
-
-.list-group-item .item-image {
-    padding: 10px 0;
-    width: 25%;
-    display: table-cell;
-    vertical-align: middle;
-    text-align: right;
-}
-
-.list-group-item .item-data {
-    width: 55%;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.list-group-item .item-price {
-    margin: 10px 0;
-    font-weight: 500;
-}
-
-.list-group-item .item-name {
-    margin: 10px 0;
-    font-weight: normal;
-    font-size: 15px;
-    padding: 0;
-}
-
-.list-group-item {
-    height: auto;
-    display: grid;
-    border: 0;
-    padding: 0;
-    width: 100%;
-    align-content: center;
-    align-items: center;
-    background: transparent;
-    margin: 15px 0;
-}
-
-.column {
-    display: table;
-    background: white;
-    border-radius: 5px;
-    padding: 0 4%;
-}
-
-.list-group-item .item-image > div {
-    width: 25px;
-    margin: inherit;
-    padding-top: 0;
-    bottom: 0;
-    right: 2%;
-    left: inherit;
-}
-
-.list-group-item .item-image > div > img {
-    display: inline-block;
-    position: relative;
-    width: 15px;
-    height: 15px;
-    overflow: hidden;
-    border-radius: 50%;
-    box-shadow: 0px 0px 0px 1px rgb(0 0 0 / 7%);
-}
-
-.list-group-item .item-flag {
-    bottom: -2px;
-    left: -5px;
-}
-
-.category-items-container {
-    padding: 0 5%;
-}
-
-.category-title {
-    font-size: 20px;
-    font-weight: normal;
-    text-transform: uppercase;
-}
-
-.item-img-element {
-    border-radius: 8px;
-    width: 100px;
-    height: 100px;
-    border: 1px solid #d9d9d9;
-}
-
-.itemInfoMain {
+.itemInfoMain{
     position: absolute;
     width: 80%;
     height: fit-content;
@@ -587,23 +502,19 @@ button.skip {
     border-radius: 12px;
     min-height: 90px;
 }
-
-.itemInfoContent {
+.itemInfoContent{
     position: absolute;
     width: 100%;
     padding: 0 15px;
 }
-
-.itemInfoHeader {
+.itemInfoHeader{
     height: 38%;
     margin-bottom: 55px;
     border-bottom: 1px solid #3333332e;
 }
-
-.item-reviews {
+.item-reviews{
     padding: 0 12%;
 }
-
 .rating {
     display: inline-block;
     position: relative;
@@ -670,25 +581,21 @@ button.skip {
     text-shadow: 0 0 5px #09f;
 }
 
-.customersRatingContainer {
+.customersRatingContainer{
     display: table;
     width: 100%;
     padding: 5px 0;
 }
-
-.customersRatingInfo {
+.customersRatingInfo{
     font-size: 14px;
 }
-
-.customersRating {
+.customersRating{
     display: table-cell;
 }
-
-.customersRatingMessage {
+.customersRatingMessage{
     display: table-row;
 }
-
-.row.item-reviews {
+.row.item-reviews{
     color: #333;
     font-size: 12px;
     padding: 20px 12% 20px 12%;
@@ -701,37 +608,6 @@ button.skip {
 .row.item-description {
     padding: 20px 12% 20px 12%;
 }
-
-/*****************************************************/
-.floatParent {
-    position: fixed;
-    left: 40%;
-    bottom: 0;
-    right: initial;
-    transform: translate(-60%, -50%);
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 25px;
-    box-shadow: 2px 2px 3px #999;
-    z-index: 100;
-    padding: 0;
-}
-
-.float {
-    color: #555;
-    background-color: transparent !important;
-    box-shadow: none;
-    border: none;
-    margin: 0;
-    border-radius: 0;
-}
-
-.floatParent a:focus, .floatParent a:hover {
-    color: #555;
-}
-
 .fb_dialog_content iframe {
     right: auto !important;
     margin: -6px 12px !important;
@@ -812,39 +688,6 @@ header {
         top: 42% !important;
     }
 }
-
-
-
-.cartParent {
-    position: fixed;
-    left: calc(50% + 15px); /* Adjust the distance from the floatParent as needed */
-    bottom: 0;
-    right: initial;
-    transform: translate(-50%, -50%);
-    margin: 0 auto;
-    background-color: #fff;
-    border-radius: 50px;
-    text-align: center;
-    font-size: 25px;
-    box-shadow: 2px 2px 3px #999;
-    z-index: 100;
-    padding: 0;
-}
-
-.cartButton {
-    color: #555;
-    background-color: transparent !important;
-    box-shadow: none;
-    border: none;
-    margin: 0;
-    border-radius: 0;
-}
-
-.cartParent a:focus, .cartParent a:hover {
-    color: #555;
-}
-
-
 #cartItemCount {
     position: absolute;
     top: -8px;
@@ -1150,19 +993,19 @@ header {
 }
 
 
+
 .myBTN {
-    background-color: #FF5733; /* Change the background color */
-    color: #fff; /* Change the text color */
-    border: 2px solid #FF5733; /* Change the border color */
-    padding: 10px 20px; /* Adjust padding as needed */
-    border-radius: 5px; /* Add rounded corners */
-    font-size: 16px; /* Change font size */
-    text-transform: uppercase; /* Convert text to uppercase */
-    cursor: pointer; /* Add a pointer cursor on hover */
+    background-color: #FF5733;
+    color: #fff;
+    border: 2px solid #FF5733;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
 
-/* Custom CSS for button on hover */
 .myBTN:hover {
-    background-color: #FF4500; /* Change background color on hover */
-    border-color: #FF4500; /* Change border color on hover */
+    background-color: #FF4500;
+    border-color: #FF4500;
 }
